--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <title>Portifolio - Nicolas Vieira</title>
 </head>
@@ -310,7 +310,7 @@
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 
