--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="style.css">
 
