--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
         <ul class="stacks">
           <li>
-            <div data="HTML">
+            <div data="HTML 5">
               <img src="svg/css.svg" alt="html-icon">
             </div>
           </li>
           <li>
-            <div data="CSS">
+            <div data="CSS 3">
               <img src="svg/html.svg" alt="css-icon">
             </div>
           </li>
@@ -84,6 +84,11 @@
         <a href="https://github.com/Niasnz" target="_blank">
           <img src="svg/github.svg" alt="github-icon">
         </a>
+
+          <a href="https://www.instagram.com/eunicolas_vieira?igsh=MXRpNjFudWRqNndhag==" target="_blank">
+            <img src="svg/instagram.svg" alt="github-icon">
+          </a>
+
         <a href="https://www.linkedin.com/in/nicolas-vieira-6114a2291/" target="_blank">
           <img src="svg/linkedin.svg" alt="linkedin-icon">
         </a>
@@ -117,13 +122,13 @@
       </div>
 
       <h3>
-        Sou um Desenvolvedor Frontend com experiências em
-        <p>HTML, CSS, JavaScript</p>
+        Sou um Desenvolvedor com experiências em:
+        <p>HTML, CSS, JavaScript, PHP, Banco de dados, Node.js entre outras. </p>
       </h3>
 
       <h4>
-        Meu nome é Nicolas Vieira tenho 16 anos,atualmente estou estudando informática para internet e um dia vou ser
-        um engenheiro de software Frontend Sênior.
+        Meu nome é Nicolas Vieira, tenho 17 anos e atualmente estou estudando Informática para Internet. 
+        Meu objetivo é me tornar um engenheiro de software Full-Stack Pleno.
       </h4>
 
     </div>
@@ -290,8 +295,20 @@
         </div>
         <div class="contact-info">
           <span>E-mail</span>
-          <a href="/">
+          <a href="mailto:nicovieira88@gmail.com">
             nicovieira88@gmail.com
+          </a>
+        </div>
+      </div>
+
+      <div class="contact-icon-content">
+        <div class="contact-icon">
+          <i class="fa-solid fa-envelope-open-text"></i>
+        </div>
+        <div class="contact-info">
+          <span>Whatsapp</span>
+          <a href="https://wa.me/message/EKOETYSL57MMD1">
+            Clique aqui para conversar comigo!
           </a>
         </div>
       </div>
@@ -304,7 +321,7 @@
   <section id="footer">
     <div class="container-footer">
       <h2>Feito com ❤️ por</h2>
-      <h3>Nicolas Vieira ©️ 2023</h3>
+      <h3>Nicolas Vieira ©️ 2025</h3>
     </div>
   </section>
   <!-- Fim footer -->
