Mudei o titulo da box about

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="section-subtitle">
         <h2>
           <p>💻</p>
-          <p><span>Desenvolvedor</span> Frontend </p>
+          <p><span>Desenvolvedor</span> Full-Stack </p>
         </h2>
       </div>
 
