Atualiza descrição do projeto e corrige links para o código e site

--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
 
             <span>Site de receitas</span>
 
-            <p>Esse projeto,contém receitas culinarias</p>
+            <p>Esse foi meu primeiro projeto,contendo receitas culinarias</p>
 
             <div class="cta-project">
-              <a href="">
+              <a href="https://github.com/NiasVl/receitas.git" target="_blank" rel="noopener noreferrer">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="https://replit.com/@NiasNz/Receitas?v=1">
+              <a href="https://receitas-ochre.vercel.app" target="_blank" rel="noopener noreferrer">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
