Mais projetos adicionados

--- a/index.html
+++ b/index.html
@@ -170,23 +170,116 @@
               </a>
             </div>
           </div>
+
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/receitas.jpg" alt="Livro de receitas">
+                <img src="img/topmotors.jpg" alt="Livro de receitas">
               </a>
             </div>
 
-            <span>Site de receitas</span>
+            <span>Site de venda de carros</span>
 
-            <p>Esse projeto,contém receitas culinarias</p>
+            <p>Segundo projeto que eu fiz,sendo um "comércio de carros"</p>
 
             <div class="cta-project">
-              <a href="/">
+              <a href="https://github.com/NiasVl/Top-Motors">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
+              <a href="https://top-motors.vercel.app">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
               <a href="/">
+                <img src="img/formulario.png" alt="Livro de receitas">
+              </a>
+            </div>
+
+            <span>Formulario de receitas</span>
+
+            <p>Primeiro contato que tive com a tag form.</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Formulario-de-receitas">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://formulario-de-receitas.vercel.app">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/formulario.png" alt="Livro de receitas">
+              </a>
+            </div>
+
+            <span>Formulario de carros</span>
+
+            <p>Aprendi mais sobre a tag form</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Formulario-de-carros">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://formulario-de-carros.vercel.app">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+          
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/css.png  " alt="Livro de receitas">
+              </a>
+            </div>
+
+            <span>Css externo</span>
+
+            <p>separando CSS em uma pasta separada dos HTML começando a ficar mais organizado e aprendendo mais sobre css tbm</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Css-externo">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://css-externo.vercel.app">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/playlist.jpg" alt="Livro de receitas">
+              </a>
+            </div>
+
+            <span>Album de musicas</span>
+
+            <p>Uma playlist com algumas musicas</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Album-de-musicas">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://album-de-musicas.vercel.app">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
@@ -195,64 +288,20 @@
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/receitas.jpg" alt="Livro de receitas">
+                <img src="img/playlist.jpg" alt="Livro de receitas">
               </a>
             </div>
 
-            <span>Site de receitas</span>
+            <span>Album de musicas</span>
 
-            <p>Esse projeto,contém receitas culinarias</p>
+            <p>Uma playlist com algumas musicas</p>
 
             <div class="cta-project">
-              <a href="/">
+              <a href="https://github.com/NiasVl/Album-de-musicas">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="/">
-                Site
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </a>
-            </div>
-          </div>
-          <div class="swiper-slide card-project">
-            <div class="image-project">
-              <a href="/">
-                <img src="img/receitas.jpg" alt="Livro de receitas">
-              </a>
-            </div>
-
-            <span>Site de receitas</span>
-
-            <p>Esse projeto,contém receitas culinarias</p>
-
-            <div class="cta-project">
-              <a href="/">
-                Código
-                <i class="fa-brands fa-github"></i>
-              </a>
-              <a href="/">
-                Site
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </a>
-            </div>
-          </div>
-          <div class="swiper-slide card-project">
-            <div class="image-project">
-              <a href="/">
-                <img src="img/receitas.jpg" alt="Livro de receitas">
-              </a>
-            </div>
-
-            <span>Site de receitas</span>
-
-            <p>Esse projeto,contém receitas culinarias</p>
-
-            <div class="cta-project">
-              <a href="/">
-                Código
-                <i class="fa-brands fa-github"></i>
-              </a>
-              <a href="/">
+              <a href="https://album-de-musicas.vercel.app">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
