Algumas coisas foram corrigidas e adicionei mais projetos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section id="header">
     <a class="header-title" href="/">
       <h1>
-        Nicolasv.dev
+        Nicolas.dev
       </h1>
     </a>
     <nav class="navbar">
@@ -174,7 +174,7 @@
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/topmotors.jpg" alt="Livro de receitas">
+                <img src="img/topmotors.jpg" alt="Logo de uma empresa de carros">
               </a>
             </div>
 
@@ -183,11 +183,11 @@
             <p>Segundo projeto que eu fiz,sendo um "comércio de carros"</p>
 
             <div class="cta-project">
-              <a href="https://github.com/NiasVl/Top-Motors">
+              <a href="https://github.com/NiasVl/Top-Motors" target="_blank" rel="noopener noreferrer">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="https://top-motors.vercel.app">
+              <a href="https://top-motors.vercel.app" target="_blank" rel="noopener noreferrer">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
@@ -197,7 +197,7 @@
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/formulario.png" alt="Livro de receitas">
+                <img src="img/formulario.png" alt="imagem de um formulario">
               </a>
             </div>
 
@@ -206,11 +206,11 @@
             <p>Primeiro contato que tive com a tag form.</p>
 
             <div class="cta-project">
-              <a href="https://github.com/NiasVl/Formulario-de-receitas">
+              <a href="https://github.com/NiasVl/Formulario-de-receitas" target="_blank" rel="noopener noreferrer">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="https://formulario-de-receitas.vercel.app">
+              <a href="https://formulario-de-receitas.vercel.app" target="_blank" rel="noopener noreferrer">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
@@ -220,7 +220,7 @@
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/formulario.png" alt="Livro de receitas">
+                <img src="img/formulario.png" alt="imagem de um formulario">
               </a>
             </div>
 
@@ -229,11 +229,11 @@
             <p>Aprendi mais sobre a tag form</p>
 
             <div class="cta-project">
-              <a href="https://github.com/NiasVl/Formulario-de-carros">
+              <a href="https://github.com/NiasVl/Formulario-de-carros" target="_blank" rel="noopener noreferrer">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="https://formulario-de-carros.vercel.app">
+              <a href="https://formulario-de-carros.vercel.app" target="_blank" rel="noopener noreferrer">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
@@ -243,7 +243,7 @@
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/css.png  " alt="Livro de receitas">
+                <img src="img/css.png  " alt="icone de css">
               </a>
             </div>
 
@@ -252,11 +252,11 @@
             <p>separando CSS em uma pasta separada dos HTML começando a ficar mais organizado e aprendendo mais sobre css tbm</p>
 
             <div class="cta-project">
-              <a href="https://github.com/NiasVl/Css-externo">
+              <a href="https://github.com/NiasVl/Css-externo" target="_blank" rel="noopener noreferrer">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="https://css-externo.vercel.app">
+              <a href="https://css-externo.vercel.app" target="_blank" rel="noopener noreferrer">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
@@ -266,7 +266,7 @@
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/playlist.jpg" alt="Livro de receitas">
+                <img src="img/playlist.jpg" alt="Capa de uma playlist">
               </a>
             </div>
 
@@ -275,40 +275,181 @@
             <p>Uma playlist com algumas musicas</p>
 
             <div class="cta-project">
-              <a href="https://github.com/NiasVl/Album-de-musicas">
+              <a href="https://github.com/NiasVl/Album-de-musicas" target="_blank" rel="noopener noreferrer">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="https://album-de-musicas.vercel.app">
+              <a href="https://album-de-musicas.vercel.app" target="_blank" rel="noopener noreferrer">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
             </div>
           </div>
+
           <div class="swiper-slide card-project">
             <div class="image-project">
               <a href="/">
-                <img src="img/playlist.jpg" alt="Livro de receitas">
+                <img src="img/catalogo.jpeg" alt="Catalogo de produtos">
               </a>
             </div>
 
-            <span>Album de musicas</span>
+            <span>Catalogo de produtos</span>
 
-            <p>Uma playlist com algumas musicas</p>
+            <p>Um catalogo com alguns produtos,e tambem aprendi a utilizar as tags map e area.</p>
 
             <div class="cta-project">
-              <a href="https://github.com/NiasVl/Album-de-musicas">
+              <a href="https://github.com/NiasVl/catalogo-de-produtos" target="_blank" rel="noopener noreferrer">
                 Código
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="https://album-de-musicas.vercel.app">
+              <a href="https://catalogo-de-produtos-eight.vercel.app/" target="_blank" rel="noopener noreferrer">
                 Site
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
             </div>
           </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/js.png" alt="icone de js">
+              </a>
+            </div>
+
+            <span>JavaScript</span>
+
+            <p>Finalmente, saindo do portugol para o JavaScript,resolvendo uma lista de exercicios.</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Estrutura-de-repeticao" target="_blank" rel="noopener noreferrer">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://estrutura-de-repeticao-two.vercel.app/" target="_blank" rel="noopener noreferrer">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/arrays.png" alt="icone de js">
+              </a>
+            </div>
+
+            <span>Arrays</span>
+
+            <p>Aprendendo a mexer em arrays.</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/lista-de-arrays" target="_blank" rel="noopener noreferrer">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://lista-de-arrays.vercel.app/" target="_blank" rel="noopener noreferrer">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/entrePags.png" alt="icone de js">
+              </a>
+            </div>
+
+            <span>Dados entre paginas</span>
+
+            <p>Com mais conhecimento sobre javascript utilizei a tag form com method post para capturar as informações com javascript mesmo, e guarda-las numa session storage. Na segunda pagina havera um calculo de IMC tambem, que muda de cor de acordo o calculo de IMC sendo peso ÷ (altura x 2) e tambem o usuario pode imprimir esta folha.</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/dados-entre-paginas" target="_blank" rel="noopener noreferrer">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://dados-entre-paginas.vercel.app/" target="_blank" rel="noopener noreferrer">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/sala.jpeg" alt="icone de js">
+              </a>
+            </div>
+
+            <span>Atividade pratica</span>
+
+            <p>Nesse projeto, minhas tarefas eram: calcular as medias dos alunos e a media da sala em cada atividade.</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Atividade-pratica" target="_blank" rel="noopener noreferrer">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://atividade-pratica-ten.vercel.app/" target="_blank" rel="noopener noreferrer">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/noticias.png" alt="icone de js">
+              </a>
+            </div>
+
+            <span>Noticias quentinhas</span>
+
+            <p>Uma pagina baseada no UOL, primeira vez utilizando um arquivo json para guardar dados e as noticias foram geradas dinamicamente com js.</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Noticias-quentinhas" target="_blank" rel="noopener noreferrer">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://noticias-quentinhas.vercel.app/" target="_blank" rel="noopener noreferrer">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide card-project">
+            <div class="image-project">
+              <a href="/">
+                <img src="img/viacep.webp" alt="icone de js">
+              </a>
+            </div>
+
+            <span>Ajax</span>
+
+            <p>Usando uma API pela primeira vez, sendo a API viacep. Primeira vez usando Fetch tambem.</p>
+
+            <div class="cta-project">
+              <a href="https://github.com/NiasVl/Ajax" target="_blank" rel="noopener noreferrer">
+                Código
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://ajax-rose.vercel.app/" target="_blank" rel="noopener noreferrer">
+                Site
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+
 
         </div>
+
 
 
         <div class="swiper-button-next"></div>
